# ECE477

.Trash-1000/files/: rf_setup.py
.Trash-1000/info/: detect_test.cpp.trashinfo  outcpp.2.mp4.trashinfo  outcpp.mp4.trashinfo  rf_setup.py.trashinfo
.metadata/: version.ini
Laser Pointer/: .project
Laser Pointer/SeniorDesignTestCode/: .cproject  .mxproject  .project  SeniorDesignTestCode Debug.launch  SeniorDesignTestCode Release.launch  SeniorDesignTestCode.ioc
RFModuleTesting/: .cproject  .mxproject  .project  RFModuleTesting.ioc  RFModuleTesting.launch
RFModuleTesting/Debug/: RFModuleTesting.elf  RFModuleTesting.list  RFModuleTesting.map  makefile  objects.list
SeniorDesignTestCode/: .mxproject  SeniorDesignTestCode.ioc
SeniorDesignTestCode/Debug/: SeniorDesignTestCode.map  makefile
SeniorDesignTestCode/Release/: SeniorDesignTestCode.list
USBController/: .cproject  .cproject.bak  .mxproject  .project.bak  USBController.ioc
USBController/Debug/: USBController.elf  USBController.hex  makefile  objects.list  output.map
USBController/Inc/: main.h
USBController/Src/: main.c  stm32f4xx_hal_msp.c  usb_device.c  usbd_conf.c
USBController2/: .cproject  .cproject.bak  .mxproject  .project  .project.bak  USBController2.ioc
USBController2/Debug/: USBController2.elf  USBController2.hex  makefile  objects.list  output.map
USBController2/Inc/: MY_NRF24.h  main.h
USBController2/Src/: main.c  stm32f7xx_hal_msp.c
USB_HID/: .cproject  .mxproject  .project  USB_HID.ioc
USB_HID/Inc/: main.h
laser_detector/cpp_testing/src/: CMakeLists.txt  proc_frame.cpp
(+415 files in other folders)
